[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=7.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelf"
description = "A type-aware, fsspec-backed general artefact store."
keywords = ["ml-ops", "fsspec", "python"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nicholas Junge", email = "nicho.junge@gmail.com" }]
maintainers = [
    { name = "Nicholas Junge", email = "nicho.junge@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = ["fsspec"]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nicholasjng/shelf"
Repository = "https://github.com/nicholasjng/shelf.git"
Issues = "https://github.com/nicholasjng/shelf/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "build>=1.0.0",
]
yaml = ["pyyaml"]

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shelf = ["py.typed"]

# Automatically determine version number from Git tags
[tool.setuptools_scm]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
python_version = "3.11"
strict_optional = false
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

# Enable pycodestyle (`E`, `W`), isort (`I`), and Pyflakes (`F`) codes.
select = ["E", "F", "I", "W"]
ignore = [
    # whitespace before colon (:), rely on black for formatting (in particular, allow spaces before ":" in list/array slices)
    "E203",
    # Multiple spaces before operator
    "E221",
    # line too long, rely on black for reformatting of these, since sometimes URLs or comments can be longer
    "E501",
    # Allow capitalized variable names, necessary for e.g., `X_train = get_train_data()`
    "F841",
]

# Ignore `F401` (unused imports) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.bandit]
exclude_dirs = ["tests"]
