[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "shelf"
description = "A type-aware, fsspec-backed general artifact store."
keywords = ["ml-ops", "fsspec", "python"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nicholas Junge", email = "nicho.junge@gmail.com" }]
maintainers = [
    { name = "Nicholas Junge", email = "nicho.junge@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = ["fsspec"]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nicholasjng/shelf"
Repository = "https://github.com/nicholasjng/shelf.git"
Issues = "https://github.com/nicholasjng/shelf/issues"

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shelf = ["py.typed"]

# Automatically determine version number from Git tags
[tool.setuptools_scm]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
python_version = "3.11"
strict_optional = false
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

# pycodestyle (`E`, `W`), isort (`I`), and Pyflakes (`F`) codes.
select = ["E", "F", "I", "W"]
ignore = [
    "E501", # Line too long
]

# Ignore `F401` (unused imports) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
